2006-06-14  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix --disable-spell-checker configure option. Bug #344848.

2006-06-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-06-10  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.15.3 ===

	* configure.ac:

2006-06-09  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	
	Remove accidentally commited code.

2006-06-09  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix the build.

2006-06-09  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix configure output.

2006-06-09  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	
	Check for enchant, and output an overview of the configured
	options on successful configure.

	* data/default-prefs-common.js:
	* embed/mozilla/GeckoSpellCheckEngine.cpp:
	* embed/mozilla/GeckoSpellCheckEngine.h:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/MozRegisterComponents.cpp:
	* lib/Makefile.am:
	* lib/ephy-spell-check.c:
	* lib/ephy-spell-check.h:

	Spell check support using the gecko 'spellchecker' extension.
	No corrections context menu or language switching yet.

2006-06-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* configure.ac: Remove AM_GLIB_DEFINE_LOCALEDIR. Bug
	#343825, patch by Christian Persch.

2006-06-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* src/ephy-shell.c: (ephy_shell_new_tab_full): copy
	history over when opening link in new tab/win using
	context menu. Fixes bug #340742, patch by René Stadler.

2006-06-04  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (resolve_cb):

	Don't crash on error from zeroconf bookmarks. Fixes bug #343922.

2006-06-05  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* lib/widgets/ephy-location-entry.c: (keyword_match):
	Improve next-token logic for bookmark completion. Fixes
	#339167 (hopefully for real this time).

2006-06-04  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphySidebar.cpp:
