@@ -1,3 +1,9 @@
+2006-06-16  Christian Persch  <chpe@cvs.gnome.org>
+
+	* data/default-prefs-common.js:
+
+	Set the warn-entering-weak security warn pref to true.
+
 2006-06-14  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
